--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <div class="w3-col l8 s12">
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-    <img src="https://github.com/juned171/hybrid_cloud/blob/master/cloud.png" alt="Nature" style="width:100%">
+    <img src="https://i.pcmag.com/imagery/articles/01nZo4Ot4FUIqaAccrCZGN9-9.fit_scale.size_2698x1517.v1569490627.jpg" alt="Nature" style="width:100%">
     <div class="w3-container">
       <h3><b>TITLE HEADING</b></h3>
       <h5>Title description, <span class="w3-opacity">April 7, 2014</span></h5>
